--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -85,7 +85,8 @@ jobs:
         shell: bash
 
       - name: Remove exec_depend
-        uses: autowarefoundation/autoware-github-actions/remove-exec-depend@v1 # yamllint disable-line rule:line-length
+        # yamllint disable-line rule:line-length
+        uses: autowarefoundation/autoware-github-actions/remove-exec-depend@v1
 
       - name: Create ccache directory and check availability
         run: |
@@ -159,11 +160,51 @@ jobs:
             echo "Installing python3-vcstool"
             apt-get update && apt-get install -y python3-vcstool
           fi
-          # Install rosdep dependencies
-          DEBIAN_FRONTEND=noninteractive rosdep update
-          DEBIAN_FRONTEND=noninteractive rosdep install -yqq \
-            --from-paths autoware_tensorrt_vad \
-            --ignore-src --rosdistro ${{ inputs.rosdistro }}
+          # Try rosdep update with retry logic
+          echo "Attempting rosdep update with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            rosdep_cmd="DEBIAN_FRONTEND=noninteractive rosdep update"
+            if ${rosdep_cmd} --include-eol-distros; then
+              echo "rosdep update succeeded"
+              break
+            else
+              echo "rosdep update failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All rosdep update attempts failed, continuing"
+                echo "Installing dependencies manually..."
+                apt-get update
+                apt-get install -y \
+                  libeigen3-dev \
+                  libcuda-dev \
+                  libnvinfer-dev \
+                  libstb-dev \
+                  nlohmann-json3-dev \
+                  ros-${{ inputs.rosdistro }}-geometry-msgs \
+                  ros-${{ inputs.rosdistro }}-nav-msgs \
+                  ros-${{ inputs.rosdistro }}-sensor-msgs \
+                  ros-${{ inputs.rosdistro }}-tf2-eigen \
+                  ros-${{ inputs.rosdistro }}-tf2-ros \
+                  ros-${{ inputs.rosdistro }}-rclcpp \
+                  ros-${{ inputs.rosdistro }}-rosbag2-cpp \
+                  ros-${{ inputs.rosdistro }}-eigen3-cmake-module
+                break
+              fi
+              sleep $((i * 10))  # Wait between attempts
+            fi
+          done
+          # Try rosdep install if rosdep update succeeded
+          rosdep_path="autoware_tensorrt_vad"
+          rosdep_distro="${{ inputs.rosdistro }}"
+          if rosdep check --from-paths ${rosdep_path} \
+              --ignore-src --rosdistro ${rosdep_distro} 2>/dev/null; then
+            echo "Running rosdep install..."
+            DEBIAN_FRONTEND=noninteractive rosdep install -yqq \
+              --from-paths ${rosdep_path} \
+              --ignore-src --rosdistro ${rosdep_distro} || true
+          else
+            echo "Skipping rosdep install due to previous failures"
+          fi
         shell: bash
 
       - name: Build autoware_tensorrt_vad
