--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -216,8 +216,13 @@ jobs:
           fi
           # Source ROS2 environment
           source /opt/ros/${{ inputs.rosdistro }}/setup.bash
-          # Install additional ROS2 build dependencies
+          # Install essential build tools and ROS2 build dependencies
           apt-get update && apt-get install -y \
+            build-essential \
+            gcc \
+            g++ \
+            cmake \
+            make \
             ros-${{ inputs.rosdistro }}-ament-cmake \
             ros-${{ inputs.rosdistro }}-ament-cmake-core \
             ros-${{ inputs.rosdistro }}-ament-lint-auto \
