--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -155,6 +155,7 @@ jobs:
           if [ -f "/setup.sh" ]; then
             . /setup.sh
           fi
+
           # Install essential build tools first
           apt-get update && apt-get install -y \
             build-essential \
@@ -165,62 +166,57 @@ jobs:
             make \
             libc6-dev \
             linux-libc-dev \
-            binutils \
-            gcc-11 \
-            g++-11 \
-            cpp-11
+            binutils
+
           # Install vcs if not available
           if ! command -v vcs &> /dev/null; then
             echo "Installing python3-vcstool"
             apt-get install -y python3-vcstool
           fi
-          # Try rosdep update with retry logic
-          echo "Attempting rosdep update with retry logic..."
-          for i in {1..3}; do
-            echo "Attempt $i of 3"
-            rosdep_update_cmd="rosdep update --include-eol-distros"
-            if DEBIAN_FRONTEND=noninteractive ${rosdep_update_cmd}; then
+
+          # Install dependencies manually to avoid rosdep issues
+          echo "Installing dependencies manually..."
+          apt-get update && apt-get install -y \
+            libeigen3-dev \
+            libstb-dev \
+            nlohmann-json3-dev \
+            ros-${{ inputs.rosdistro }}-geometry-msgs \
+            ros-${{ inputs.rosdistro }}-nav-msgs \
+            ros-${{ inputs.rosdistro }}-sensor-msgs \
+            ros-${{ inputs.rosdistro }}-tf2-eigen \
+            ros-${{ inputs.rosdistro }}-tf2-ros \
+            ros-${{ inputs.rosdistro }}-rclcpp \
+            ros-${{ inputs.rosdistro }}-rosbag2-cpp \
+            ros-${{ inputs.rosdistro }}-eigen3-cmake-module
+
+          # CUDA packages are optional and may not be available
+          cuda_msg="CUDA packages not available, continuing without them"
+          apt-get install -y libcuda-dev libnvinfer-dev || \
+            echo "${cuda_msg}"
+
+          # Try rosdep update with simple retry
+          echo "Attempting rosdep update..."
+          for i in {1..2}; do
+            echo "Attempt $i of 2"
+            rosdep_cmd="rosdep update --include-eol-distros"
+            if DEBIAN_FRONTEND=noninteractive ${rosdep_cmd}; then
               echo "rosdep update succeeded"
+              # Try rosdep install
+              rosdep_path="autoware_tensorrt_vad"
+              rosdep_distro="${{ inputs.rosdistro }}"
+              DEBIAN_FRONTEND=noninteractive rosdep install -yqq \
+                --from-paths ${rosdep_path} \
+                --ignore-src --rosdistro ${rosdep_distro} || true
               break
             else
               echo "rosdep update failed, attempt $i"
-              if [ $i -eq 3 ]; then
-                echo "All rosdep update attempts failed, continuing"
-                echo "Installing dependencies manually..."
-                apt-get update
-                apt-get install -y \
-                  libeigen3-dev \
-                  libstb-dev \
-                  nlohmann-json3-dev \
-                  ros-${{ inputs.rosdistro }}-geometry-msgs \
-                  ros-${{ inputs.rosdistro }}-nav-msgs \
-                  ros-${{ inputs.rosdistro }}-sensor-msgs \
-                  ros-${{ inputs.rosdistro }}-tf2-eigen \
-                  ros-${{ inputs.rosdistro }}-tf2-ros \
-                  ros-${{ inputs.rosdistro }}-rclcpp \
-                  ros-${{ inputs.rosdistro }}-rosbag2-cpp \
-                  ros-${{ inputs.rosdistro }}-eigen3-cmake-module
-                # CUDA packages are optional and may not be available
-                cuda_msg="CUDA packages not available, continuing without them"
-                apt-get install -y libcuda-dev libnvinfer-dev || \
-                  echo "${cuda_msg}"
-                break
+              if [ $i -eq 2 ]; then
+                msg="rosdep update failed, but dependencies already"
+                echo "${msg} installed manually"
               fi
-              sleep $((i * 10))  # Wait between attempts
+              sleep 10
             fi
           done
-          # Try rosdep install if rosdep update succeeded
-          rosdep_path="autoware_tensorrt_vad"
-          rosdep_distro="${{ inputs.rosdistro }}"
-          if rosdep check --from-paths ${rosdep_path} \
-              --ignore-src --rosdistro ${rosdep_distro} 2>/dev/null; then
-            echo "Running rosdep install..."
-            DEBIAN_FRONTEND=noninteractive rosdep install -yqq \
-              --from-paths ${rosdep_path} \
-              --ignore-src --rosdistro ${rosdep_distro} || true
-          else
-            echo "Skipping rosdep install due to previous failures"
-          fi
         shell: bash
 
       - name: Build autoware_tensorrt_vad
@@ -230,93 +226,69 @@ jobs:
           fi
           # Source ROS2 environment
           source /opt/ros/${{ inputs.rosdistro }}/setup.bash
-          # Install ROS2 build dependencies
+
+          # Install ROS2 build dependencies only
           apt-get update && apt-get install -y \
             ros-${{ inputs.rosdistro }}-ament-cmake \
             ros-${{ inputs.rosdistro }}-ament-cmake-core \
             ros-${{ inputs.rosdistro }}-ament-lint-auto \
             ros-${{ inputs.rosdistro }}-ament-lint-common
-          # Verify and fix compiler installation
-          echo "Checking compiler installation..."
-          which gcc || echo "gcc not found"
-          which g++ || echo "g++ not found"
-          gcc --version || echo "gcc version check failed"
-          echo "PATH: $PATH"
-          # Find and verify cc1 location
-          cc1_path=$(find /usr -name "cc1" 2>/dev/null | head -1)
-          if [ -n "$cc1_path" ]; then
-            echo "Found cc1 at: $cc1_path"
-            cc1_dir=$(dirname "$cc1_path")
-            export PATH="$cc1_dir:$PATH"
-          else
-            echo "cc1 not found, installing gcc-11 specifically"
-            apt-get install -y gcc-11 g++-11
-            # Try to find cc1 again
-            cc1_path=$(find /usr -name "cc1" 2>/dev/null | head -1)
-            if [ -n "$cc1_path" ]; then
-              echo "Found cc1 at: $cc1_path"
-              cc1_dir=$(dirname "$cc1_path")
-              export PATH="$cc1_dir:$PATH"
-            fi
-          fi
-          # Set explicit compiler paths
+
+          # Set up compiler environment (use already installed compilers)
+          echo "Setting up compiler environment..."
           export CC=/usr/bin/gcc
           export CXX=/usr/bin/g++
-          # Add gcc libexec directories to PATH
-          for gcc_dir in /usr/lib/gcc/x86_64-linux-gnu/*; do
-            if [ -d "$gcc_dir" ]; then
-              export PATH="$gcc_dir:$PATH"
-            fi
-          done
-          # Alternative: try to fix gcc installation if still broken
-          test_cmd="echo 'int main(){return 0;}' | \$CC -x c - -o /tmp/test"
-          if ! eval "$test_cmd" 2>/dev/null; then
-            echo "Compiler still broken, trying alternative fixes..."
-            # Reinstall gcc completely
-            apt-get remove -y gcc g++ cpp
-            apt-get autoremove -y
-            apt-get install -y gcc-11 g++-11 cpp-11
-            update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 100
-            update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-11 100
-            update-alternatives --install /usr/bin/cpp cpp /usr/bin/cpp-11 100
-            export CC=/usr/bin/gcc-11
-            export CXX=/usr/bin/g++-11
-            # Update PATH again
-            for gcc_dir in /usr/lib/gcc/x86_64-linux-gnu/*; do
-              if [ -d "$gcc_dir" ]; then
-                export PATH="$gcc_dir:$PATH"
-              fi
-            done
-          fi
-          echo "CC=${CC}, CXX=${CXX}"
-          echo "Updated PATH: $PATH"
+
           # Test compiler functionality
           echo "Testing compiler..."
           echo 'int main(){return 0;}' > test.c
-          $CC -c test.c -o test.o && echo "Compiler test passed" || \
-            echo "Compiler test failed"
+          if ! $CC -c test.c -o test.o 2>/dev/null; then
+            echo "Default compiler failed, checking alternatives..."
+            # Check if gcc-11 is available
+            if [ -f /usr/bin/gcc-11 ]; then
+              echo "Using gcc-11..."
+              export CC=/usr/bin/gcc-11
+              export CXX=/usr/bin/g++-11
+            else
+              echo "Reinstalling build-essential..."
+              reinstall_cmd="apt-get install -y --reinstall"
+              ${reinstall_cmd} build-essential gcc g++ cpp
+              export CC=/usr/bin/gcc
+              export CXX=/usr/bin/g++
+            fi
+          fi
           rm -f test.c test.o
+
+          echo "Final compiler setup: CC=${CC}, CXX=${CXX}"
+          $CC --version
+          $CXX --version
+
           # Import build_depends repositories
           if [ -f build_depends.repos ]; then
             mkdir -p dependency_ws/src
             vcs import dependency_ws/src < build_depends.repos
+
             # Source ROS2 environment again for dependency build
             source /opt/ros/${{ inputs.rosdistro }}/setup.bash
+
             # Build dependencies first with proper environment
             cd dependency_ws
-            colcon build --cmake-args \
-              -DCMAKE_BUILD_TYPE=Release \
-              -DCMAKE_C_COMPILER=${CC} \
-              -DCMAKE_CXX_COMPILER=${CXX} \
+            colcon build \
+              --cmake-args \
+                -DCMAKE_BUILD_TYPE=Release \
+                -DCMAKE_C_COMPILER=${CC} \
+                -DCMAKE_CXX_COMPILER=${CXX} \
               --packages-up-to autoware_cmake autoware_msgs
             source install/setup.bash
             cd ..
           fi
+
           # Build the target package
-          colcon build --cmake-args \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_C_COMPILER=${CC} \
-            -DCMAKE_CXX_COMPILER=${CXX} \
+          colcon build \
+            --cmake-args \
+              -DCMAKE_BUILD_TYPE=Release \
+              -DCMAKE_C_COMPILER=${CC} \
+              -DCMAKE_CXX_COMPILER=${CXX} \
             --packages-select autoware_tensorrt_vad
         shell: bash
 
