ci(autoware_tensorrt_vad): update pre-commit config due to avoid conflict
Signed-off-by: Shin-kyoto <aquashin0202@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,7 +50,7 @@ repos:
       - id: prettier-xacro
       - id: prettier-launch-xml
       - id: prettier-package-xml
-      - id: ros-include-guard
+      # - id: ros-include-guard  # Disabled due to conflict with cpplint
       - id: sort-package-xml
 
   - repo: https://github.com/shellcheck-py/shellcheck-py
