feat(autoware_tensorrt_vad): add structure for VAD ROS Node
Signed-off-by: Shin-kyoto <aquashin0202@gmail.com>

--- a/autoware_tensorrt_vad/package.xml
+++ b/autoware_tensorrt_vad/package.xml
@@ -17,6 +17,7 @@
   <depend>libeigen3-dev</depend>
   <depend>nav_msgs</depend>
   <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
   <depend>rosbag2_cpp</depend>
   <depend>sensor_msgs</depend>
   <depend>tf2_eigen</depend>
