chore(autoware_tensorrt_vad): update .gitignore not to track .vscode and cyclonedds.log
Signed-off-by: Shin-kyoto <aquashin0202@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -49,8 +49,14 @@ qtcreator-*
 # Emacs
 .#*
 
+# VSCode
+.vscode/
+
 # Catkin custom files
 CATKIN_IGNORE
+
+# ROS 2 log
+cyclonedds.log
 
 #prettier
 node_modules/
