--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -81,13 +81,13 @@ repos:
       - id: clang-format
         types_or: [c++, c, cuda]
 
-  # Add clang-tidy for naming convention enforcement
-  - repo: https://github.com/pocc/pre-commit-hooks
-    rev: v1.3.5
-    hooks:
-      - id: clang-tidy
-        args: [--config-file=.clang-tidy]
-        types_or: [c++, c]
+  # Add clang-tidy for naming convention enforcement (temporarily disabled)
+  # - repo: https://github.com/pocc/pre-commit-hooks
+  #   rev: v1.3.5
+  #   hooks:
+  #     - id: clang-tidy
+  #       args: [--config-file=.clang-tidy]
+  #       types_or: [c++, c]
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.30.0
